k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: kavach
  labels:
    app: api-gateway

#Auto scaling - Auto Healing specifications
spec:   
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: public.ecr.aws/e4t3d5j8/kavach-backend-api-gateway
          ports:
            - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: kavach
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
